<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HelpActivity">

        <TextView
            android:id="@+id/phone_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/phone_control"
            android:textColor="@color/blue_01"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/phone_txt"
            android:paddingLeft="24dp"
            android:paddingRight="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_control" />

        <TextView
            android:id="@+id/navigation_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/navigate"
            android:textColor="@color/blue_01"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_text" />

        <TextView
            android:id="@+id/navigation_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="24dp"
            android:paddingRight="16dp"
            android:text="@string/navigate_txt"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigation_control" />

        <TextView
            android:id="@+id/tutorial_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/tutorials"
            android:textColor="@color/blue_01"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigation_txt" />

        <TextView
            android:id="@+id/tutorial_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tutorial_txt"
            android:textColor="@color/black"
            android:paddingLeft="24dp"
            android:paddingRight="16dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_control" />

        <Button
            android:id="@+id/contact_us_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="38dp"
            android:backgroundTint="@color/blue_02"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:text="@string/call_us"
            android:textAllCaps="false"
            android:textSize="22sp"
            app:icon="@drawable/call"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_txt"
            app:strokeColor="@color/blue_01"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/email_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="38dp"
            android:layout_marginStart="38dp"
            android:backgroundTint="@color/blue_02"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:text="@string/email_us"
            android:textAllCaps="false"
            android:textSize="22sp"
            app:icon="@drawable/email"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_us_btn"
            app:strokeColor="@color/blue_01"
            app:strokeWidth="1dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
