<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TutorialFragment">


    <TextView
        android:id="@+id/tutorial_instr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/tutorials_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/phone_feature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/phone_features"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_instr" />

    <Button
        android:id="@+id/app_tutorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/apps_tut"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_feature" />

    <Button
        android:id="@+id/internet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/internet"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_tutorial" />

    <Button
        android:id="@+id/social_media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/social_media"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internet" />
</androidx.constraintlayout.widget.ConstraintLayout>