<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OverviewFragment">


    <TextView
        android:id="@+id/instru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:layout_marginTop="42dp"
        android:text="@string/intru"
        android:textColor="@color/blue_01"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instru" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:icon="@drawable/start"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />
</androidx.constraintlayout.widget.ConstraintLayout>