<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccessibilityFragment">

    <TextView
        android:id="@+id/access_instru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/access_instruction"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/textToSpeech_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/text_to_speech"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:typeface="normal"
        app:icon="@drawable/text_to_speech"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_instru"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/visionOption_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/vision_option"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:typeface="normal"
        app:icon="@drawable/vision_icon"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textToSpeech_btn"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/voice_cmd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/voice_command"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:typeface="normal"
        app:icon="@drawable/voice_command"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visionOption_btn"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>