<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_to_techease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Welcome to TechEase!"
        android:textColor="#004880"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_screen_instructions"
        android:layout_width="343dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_screen_instructions"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_techease" />

    <Button
        android:id="@+id/start_tutorials_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="38dp"
        android:backgroundTint="@color/blue_02"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/start_tutorial"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:typeface="normal"
        app:icon="@drawable/tutorial_book_icon"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_screen_instructions"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue_02"
        app:strokeColor="@color/blue_01"
        app:strokeWidth="1dp"
        android:layout_marginRight="38dp"
        android:layout_marginLeft="38dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:icon="@drawable/settings_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_tutorials_button" />
</androidx.constraintlayout.widget.ConstraintLayout>